--- a/config.yaml
+++ b/config.yaml
@@ -11,6 +11,9 @@ gender: female               # male, female, or any
 min_age: 30                  # Minimum patient age
 max_age: 60                  # Maximum patient age
 state: Massachusetts         # Synthea state parameter
-city: Boston                 # Synthea city parameter
+city: Boston
+modules:
+  - cardiovascular-disease
+  - diabetes                 # Synthea city parameter
 local_config: custom_synthea.properties  # Custom Synthea config file
 local_modules: ./synthea_modules         # Directory for custom modules
