--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ authors = [
 requires-python = ">=3.7"
 dependencies = [
     "faker",
-    "fpdf"
+    "fpdf",
+    "pandas"
 ]
 license = {text = "MIT"}
 classifiers = [
