--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,8 +14,13 @@ requires-python = ">=3.7"
 dependencies = [
     "faker",
     "fpdf",
-    "pandas"
+    "pandas",
+    "pyyaml",
+    "numpy"
 ]
+
+[project.optional-dependencies]
+llm = ["openai"]
 license = {text = "MIT"}
 classifiers = [
     "Development Status :: 5 - Production/Stable",
